--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -726,38 +726,41 @@ body.dark .custom-divider {
     .content-header .content-title {
         font-size: 1.3rem;
         line-height: 1.2;
+        font-weight: 500;
     }
-    
+
     .content-header .content-subtitle {
         font-size: 0.9rem;
         line-height: 1.2;
+        font-weight: 400;
     }
-    
+
     .card-container {
         padding: 10px;
         gap: 10px;
         flex-direction: row;
     }
-    
+
     .card-container img {
         width: 50px;
         height: 50px;
         border-radius: 10px;
     }
-    
+
     .card-container .developer-name {
         font-size: 0.95rem;
     }
-    
+
     .card-container p {
         font-size: 0.75rem;
     }
-    
+
     .telegram-button {
-        font-size: 0.85rem;
-        padding: 0.6rem 1.2rem;
+        padding: 1rem 1.8rem;
+        font-size: 1rem;
+        font-weight: 600;
     }
-    
+
     .telegram-icon {
         width: 22px;
         height: 22px;
